--- a/EventReminderApp2/Views/User/ResetPassword.cshtml
+++ b/EventReminderApp2/Views/User/ResetPassword.cshtml
@@ -24,7 +24,7 @@
 <body>
     <div class="container register-form">
 
-        <form name="PasswordResetForm" method=post>
+        <form class="PasswordResetForm" method=post>
             <div class="form-content">
 
                 <div class="text-danger">
