--- a/EventReminderApp2/CSS/LoginReg.css
+++ b/EventReminderApp2/CSS/LoginReg.css
@@ -27,23 +27,13 @@
         height: auto;
         padding: 10px;
         font-size: 16px;
+        margin:5px;
     }
 
         #logreg-forms .form-control:focus {
             z-index: 2;
         }
-
-    /*#logreg-forms .form-signin input[type="text"] {
-        margin-bottom: -1px;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-
-    #logreg-forms .form-signin input[type="password"] {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }*/
-
+   
     #logreg-forms .social-login {
         width: 390px;
         margin: 0 auto;
@@ -101,5 +91,10 @@
 .submit {
     background: -webkit-linear-gradient(0deg, #2dfbff 0%, #3c96ff 100%);
     border-radius: 25px;
+    margin:5px;
     color: #fff;
+}
+
+#btnResetPassword {
+    margin-top: 15px;
 }
