--- a/EventReminderApp2/Views/User/UserHome.cshtml
+++ b/EventReminderApp2/Views/User/UserHome.cshtml
@@ -87,7 +87,7 @@
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                 <div id="calender"></div>
                 <div class="modal" id="myModal">
-                    <div class="modal-dialog">
+                    <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
 
                             <div class="modal-header">
@@ -118,11 +118,11 @@
                 @*/update calender/*@
 
                 <div class="modal" id="myModalSave">
-                    <div class="modal-dialog">
+                    <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
 
-                            <div class="modal-header">
-                                <h4 class="modal-title">Save Event</h4>
+                            <div class="modal-header text-center">
+                                <h4 class="modal-title w-100">Save Event</h4>
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
 
@@ -248,7 +248,7 @@
 
     @*Login modal*@
     <div class="modal" id="ModalSignInSignUp">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
 
                 <div class="modal-body">
@@ -310,10 +310,10 @@
 
     @*Event List Update modal*@
     <div class="modal" id="ModalListUpdate">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title"> Update Event</h4>
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100"> Update Event</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
@@ -375,10 +375,10 @@
 
     @*User details modal popup*@
     <div class="modal" id="ModalUserDetails">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Update User Details</h4>
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100">Update User Details</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
@@ -411,11 +411,11 @@
 
     @*Create event popup*@
     <div class="modal" id="createEventModal">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
 
-                <div class="modal-header">
-                    <h4 class="modal-title">Create Event</h4>
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100">Create Event</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
