--- a/EventReminderApp2/CSS/Home.css
+++ b/EventReminderApp2/CSS/Home.css
@@ -95,7 +95,7 @@ font-size: 1.15em;
 }*/
 
 
-#user-name::after {
+/*#user-name::after {
     content: "*";
     color: red;
     font-size: 1.15em;
@@ -117,6 +117,6 @@ font-size: 1.15em;
    content:"*";
   color: red;
    font-size: 1.15em;
-} 
+}*/ 
  
 
