--- a/EventReminderApp2/Views/User/UserHome.cshtml
+++ b/EventReminderApp2/Views/User/UserHome.cshtml
@@ -70,8 +70,7 @@
     <div class="col-xs-12 " id="tab">
         <nav>
             <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-                @*<a class="nav-item nav-link" id="nav-Create-tab" data-toggle="tab" href="#nav-create" role="tab" aria-controls="nav-create" aria-selected="false">create</a>*@
+                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>              
                 <a class="nav-item nav-link" id="nav-listView-tab" data-toggle="tab" href="#nav-listView" role="tab" aria-controls="nav-listView" aria-selected="false">List View</a>
             </div>
         </nav>
@@ -156,67 +155,8 @@
                     </div>
                 </div>
 
-
             </div>@*home--end*@
-
-
-            @*create*@
-            @*<div class="tab-pane fade" id="nav-create" role="tabpanel" aria-labelledby="nav-create-tab">
-
-                <div class="container register-form" id="createForm">
-                    <form name="CreateForm" method=post>
-
-                        <div class="form-content">
-
-                            <input type="hidden" class="form-control" name="UserId" id="UserId" />
-                            <input type="hidden" class="form-control" name="EventId" id="EventId" />
-
-                            <div class="row form-group">
-                                <div class="col-md-3">
-                                    <label>Event Name:</label>
-                                </div>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" placeholder="Event Name" name="EventName" id="EventName" required />
-                                </div>
-                            </div>
-
-                            <div class="row form-group">
-                                <div class="col-md-3">
-                                    <label>Description:</label>
-                                </div>
-                                <div class="col-md-9">
-                                    <textarea class="form-control" cols="40" rows="5" placeholder="Description" name="Description" id="Description"></textarea>
-                                </div>
-                            </div>
-
-                            <div class="row form-group">
-                                <div class="col-md-3">
-                                    <label>Start Date:</label>
-                                </div>
-
-                                <div class="col-md-9">
-                                    <input type="datetime-local" class="form-control" placeholder="DD-MM-YYYY HH:mm a" name="StartDate" id="StartDate" required />
-                                </div>
-                            </div>
-
-                            <div class="row form-group">
-                                <div class="col-md-3">
-                                    <label>End Date:</label>
-                                </div>
-
-                                <div class="col-md-9">
-                                    <input type="datetime-local" class="form-control" placeholder="DD-MM-YYYY HH:mm a" name="EndDate" id="EndDate" required />
-                                </div>
-                            </div>
-
-                            <button type="button" class="btnSubmit" id="btnSubmitCreate">Submit</button>
-                        </div>
-                    </form>
-                </div>
-            </div>*@
-            @*create--end*@
-
-
+           
             @*listView*@
             <div class="tab-pane fade" id="nav-listView" role="tabpanel" aria-labelledby="nav-listView-tab">
                 <div class="container" id="eventLists">
@@ -259,7 +199,7 @@
                             </div>
                             <p style="text-align:center"> OR  </p>
                             <div class="input-group">
-                                <input type="text" id="inputEmail" class="form-control" name="Email" placeholder="Email id" required="" autofocus="">
+                                <input type="email" id="inputEmail" class="form-control" name="Email" placeholder="Email id" required="" autofocus="">
                             </div>
                             <div class="input-group">
                                 <input type="password" id="inputPassword" class="form-control" name="Password" placeholder="Password" required="">
@@ -285,7 +225,7 @@
 
 
                         <form class="form-signup">
-                            <input type="text" id="user-name" class="form-control" placeholder="User name" name="UserName" required autofocus="">
+                            <input type="text" id="user-name" class="form-control" placeholder="User name *" name="UserName" required autofocus="">
                             <input type="text" id="user-dob" class="form-control" placeholder="Date of birth" name="DOB" onfocus="(this.type='date')" onblur="(this.type='text')" autofocus="">
                             <input type="text" id="user-phone" class="form-control" placeholder="Phone number" name="Phone" autofocus="">
                             <input type="email" id="user-email" class="form-control" placeholder="Email address *" name="Email" required autofocus="">
@@ -346,7 +286,7 @@
                                     </div>
 
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" placeholder="DD-MM-YYYY HH:mm a" name="StartDateList" id="StartDateList" required />
+                                        <input type="text" class="form-control" placeholder="DD-MM-YYYY HH:mm:ss" name="StartDateList" id="StartDateList" required />
                                     </div>
                                 </div>
 
@@ -356,7 +296,7 @@
                                     </div>
 
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" placeholder="DD-MM-YYYY HH:mm a" name="EndDateList" id="EndDateList" required />
+                                        <input type="text" class="form-control" placeholder="DD-MM-YYYY HH:mm:ss" name="EndDateList" id="EndDateList" required />
                                     </div>
                                 </div>
 
@@ -383,15 +323,15 @@
                     <form class="form-User">
                         <input type="hidden" class="form-control" name="uId" id="uId" />
                         <div class="form-group">
-                            <label>User Name:</label>
+                            <label class="required">User Name:</label>
                             <input type="text" id="uName" class="form-control" placeholder="Username" name="uName" required autofocus="">
                         </div>
                         <div class="form-group">
-                            <label>Email:</label>
+                            <label class="required">Email:</label>
                             <input type="email" id="uEmail" class="form-control" placeholder="Email address" name="uEmail" required autofocus="">
                         </div>
                         <div class="form-group">
-                            <label>Date of birth:</label>
+                            <label class="required">Date of birth:</label>
                             <input type="text" id="uDOB" class="form-control" placeholder="DD-MM-YYYY" name="uDOB" autofocus="">
                         </div>
                         <div class="form-group">
