--- a/EventReminderApp2/CSS/Home.css
+++ b/EventReminderApp2/CSS/Home.css
@@ -1,11 +1,11 @@
 ﻿.header {
     text-align: center;
+    display:flex;
     height: 80px;
     background: mediumseagreen;
     color: #fff;
     font-weight: bold;
-    line-height: 80px;
-
+    /*line-height: 80px;*/
     overflow: hidden;
     padding:0 10px;
 }
@@ -39,12 +39,13 @@
 }
 
 .pContainer {
-    float: left;
-    margin-left:40%;
+    display:flex; 
+    /*float: left;
+    margin-left:40%;*/
 }
 
 .btnContainer {
-    float: right;
+    /*float: right;*/
     margin-right:20px;
 }
 
@@ -72,11 +73,12 @@
 }
 
 #welcome {
-    float: left;    
+    float: left;   
+    margin-bottom:0;
 }
 
 #appName {
-    font-size: 20px;
+    font-size: 20px;    
 }
 
 .required:after {
@@ -88,35 +90,50 @@
     width: 90px;
 }
 
-/*#user-name::-input-placeholder:after {
-content: "*";
-color: red;
-font-size: 1.15em;
-}*/
-
-
-/*#user-name::after {
-    content: "*";
-    color: red;
-    font-size: 1.15em;
+.deleteRow {
+    background-image: url('deleteIcon.svg');
+    width: 25px;
+    height: 25px;
 }
 
-#user-name::-webkit-input-placeholder:after {
-    content: "*";
-    color: red;
-    font-size: 1.15em;
+.EditRow {
+    background-image: url('editIcon.svg');
+    width: 25px;
+    height: 25px;
 }
 
-#user-name::-moz-placeholder:after {
-    content: "*";
-    color: red;
-    font-size: 1.15em;
- }
+#btnSignOut {  
+    width: 35px;
+    height: 35px;
+}
 
-  #user-name:-ms-input-placeholder:after {
-   content:"*";
-  color: red;
-   font-size: 1.15em;
-}*/ 
- 
+#btnEdit {
+    background-image: url('editIcon.svg');
+    width: 25px;
+    height: 25px;
+}
 
+#btnDelete {
+    background-image: url('deleteIcon.svg');
+    width: 25px;
+    height: 25px;
+}
+
+#calendarIcon {
+    background-image: url('IconCalendarClock.svg');
+    background-repeat: no-repeat, repeat;
+    width: 30px;
+    height: 30px;
+    display:inline-block;
+    /*float: right;*/
+}
+
+/*inline validation*/
+.error-show {
+    display: inline-block;
+    color: #d80707;
+}
+
+.not-error {
+    display: none
+}
