--- a/EventReminderApp2/Views/User/UserHome.cshtml
+++ b/EventReminderApp2/Views/User/UserHome.cshtml
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-    
+
     <script src="~/Scripts/UserHome.js"></script>
     <link href="~/CSS/Home.css" rel="stylesheet" />
     <link href="~/CSS/NavTabss.css" rel="stylesheet" />
@@ -28,7 +28,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css" rel="stylesheet" media="print" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
-   
+
     @*//google api*@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
@@ -37,7 +37,7 @@
     <script src="~/Scripts/toastr.js"></script>
 
     @*//facebook api*@
-    <script src="~/Scripts/FacebookAuthentication.js"></script>       
+    <script src="~/Scripts/FacebookAuthentication.js"></script>
     <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </head>
@@ -49,19 +49,26 @@
         <input type="hidden" class="form-control" id="SessionUserName" value="@ViewBag.USERNAME" />
     }
 
-        <div class="header">            
-            <label id="welcome" style="color: orange;display:none">Welcome</label>
-            <a id="currentUser" href="#" style="color: orange"></a>
-            <div class="pContainer">
-                <p id="appName">Event Reminder</p>
-            </div>
-            <div class="btnContainer">
-                <button id="btnSignInSignUp" class="btn btn-danger btn-large">Sign-In or Sign-Up</button>
-                <button id="btnSignOut" class="btn btn-danger btn-large" style="display:none">Sign Out</button>
+        <div class="header">
+            <div style="display: flex; align-items: center; align-content: center; width: 100%; justify-content: space-between;">
+                <div>
+                    <label id="welcome" style="color: orange;display:none">Welcome</label>
+                    <a id="currentUser" href="#" style="color: orange"></a>
+                </div>
+                <div class="pContainer">
+                    <p id="appName">Event Reminder</p>
+                    <div id="calendarIcon"></div>
+                </div>                
+                <div class="btnContainer">
+                    <button id="btnSignInSignUp" class="btn btn-danger btn-large">Sign-In or Sign-Up</button>
+                    @*<button id="btnSignOut" class="btn btn-danger btn-large" style="display:none">Sign Out</button>*@
+                    <img src="~/CSS/logout.svg" id="btnSignOut" style="display:none" />                   
+                </div>
             </div>
         </div>
 
     @*background*@
+    @*<button id="sendFbNotification" class="btn btn-danger btn-large">send notification</button>*@
     <div id="backgroundImg">
         <img src="~/CSS/calenderIMG.jpg" alt="calender" class="img-fluid" />
     </div>
@@ -70,7 +77,7 @@
     <div class="col-xs-12 " id="tab">
         <nav>
             <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>              
+                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
                 <a class="nav-item nav-link" id="nav-listView-tab" data-toggle="tab" href="#nav-listView" role="tab" aria-controls="nav-listView" aria-selected="false">List View</a>
             </div>
         </nav>
@@ -93,13 +100,8 @@
                             </div>
 
                             <div class="modal-body">
-                                <button type="button" id="btnDelete" class="btn btn-info btn-sm float-right">
-                                    <span class="glyphicon glyphicon-remove"></span> Remove
-                                </button>
-                                <button id="btnEdit" class="btn btn-info btn-sm float-right" style="margin-right:5px;">
-                                    <span class="glyphicon glyphicon-pencil"></span> Edit
-                                </button>
-
+                                <button type="button" id="btnDelete" class="btn btn-sm float-right"></button>
+                                <button id="btnEdit" class="btn btn-sm float-right" style="margin-right:8px;"></button>
                                 <p id="pDetails"></p>
                             </div>
 
@@ -156,7 +158,7 @@
                 </div>
 
             </div>@*home--end*@
-           
+
             @*listView*@
             <div class="tab-pane fade" id="nav-listView" role="tabpanel" aria-labelledby="nav-listView-tab">
                 <div class="container" id="eventLists">
@@ -198,12 +200,14 @@
                                 <button class="btn google-btn social-btn" id="btnGoogleLogin" type="button"><span><i class="fab fa-google-plus-g"></i> Sign in with Google+</span> </button>
                             </div>
                             <p style="text-align:center"> OR  </p>
-                            <div class="input-group">
-                                <input type="email" id="inputEmail" class="form-control" name="Email" placeholder="Email id" required="" autofocus="">
-                            </div>
-                            <div class="input-group">
-                                <input type="password" id="inputPassword" class="form-control" name="Password" placeholder="Password" required="">
-                            </div>
+                            @*<div class="input-group">*@
+                            <input type="email" id="inputEmail" class="form-control" name="Email" placeholder="Email id" required="" autofocus="">
+                            <span id="errorLoginEmail" class="not-error invalid-msg"></span>
+                            @*</div>*@
+                            @*<div class="input-group">*@
+                            <input type="password" id="inputPassword" class="form-control" name="Password" placeholder="Password" required="">
+                            <span id="errorLoginPassword" class="not-error invalid-msg"></span>
+                            @*</div>*@
                             <div class="input-group">
                                 <button class="btn btn-md btn-rounded btn-block form-control submit" id="btnLogin" type="button"><i class="fas fa-sign-in-alt"></i> Sign in</button>
                             </div>
@@ -226,11 +230,17 @@
 
                         <form class="form-signup">
                             <input type="text" id="user-name" class="form-control" placeholder="User name *" name="UserName" required autofocus="">
+                            <span id="errorUserName" class="not-error invalid-msg"></span>
                             <input type="text" id="user-dob" class="form-control" placeholder="Date of birth" name="DOB" onfocus="(this.type='date')" onblur="(this.type='text')" autofocus="">
+                            <span id="errorDOB" class="not-error"></span>
                             <input type="text" id="user-phone" class="form-control" placeholder="Phone number" name="Phone" autofocus="">
+                            <span id="errorPhone" class="not-error"></span>
                             <input type="email" id="user-email" class="form-control" placeholder="Email address *" name="Email" required autofocus="">
+                            <span id="errorEmail" class="not-error invalid-msg"></span>
                             <input type="password" id="user-pass" class="form-control" placeholder="Password *" name="Password" required autofocus="">
+                            <span id="errorPassword" class="not-error invalid-msg"></span>
                             <input type="password" id="user-repeatpass" class="form-control" placeholder="Confirm Password *" name="RePassword" required autofocus="">
+                            <span id="errorRePassword" class="not-error invalid-msg"></span>
                             <div class="input-group">
                                 <button class="btn btn-md btn-block submit" id="btn-SignUp" type="button"><i class="fas fa-user-plus"></i> Sign Up</button>
                             </div>
